--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,8 +8,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#100f12">
-    <meta name="msapplication-TileColor" content="#b91d47">
-    <meta name="theme-color" content="#ff0000">
+    <meta name="msapplication-TileColor" content="#100f12">
+    <meta name="theme-color" content="#100f12">
     <title>AGF</title>
   </head>
   <body>
